starpadLibs/Math/ExprText/TextParser.fsyacc.output
Output file describing compiled parser placed in TextParser.fs and TextParser.fsi
------------------------
states = 
state 0:
  items:
    _startexpr ->  . expr

  actions:
    action 'EOF' (noprec):   error
    action 'LE' (noprec):   error
    action 'GE' (noprec):   error
    action 'NE' (noprec):   error
    action 'PM' (noprec):   error
    action 'MP' (noprec):   error
    action 'ERRS' (noprec):   shift 61
    action 'ERRE' (noprec):   error
    action 'LSB' (noprec):   error
    action 'RSB' (noprec):   error
    action 'US' (noprec):   error
    action 'LT' (noprec):   error
    action 'GT' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'LP' (noprec):   shift 53
    action 'RP' (noprec):   error
    action 'LCB' (noprec):   shift 56
    action 'RCB' (noprec):   error
    action 'EQ' (noprec):   error
    action 'FACT' (noprec):   error
    action 'PLUS' (noprec):   shift 40
    action 'MINUS' (noprec):   shift 38
    action 'TIMES' (noprec):   error
    action 'DIVIDE' (noprec):   error
    action 'POW' (noprec):   error
    action 'VB' (noprec):   shift 48
    action 'LLT' (noprec):   shift 85
    action 'GGT' (noprec):   error
    action 'ID' (noprec):   shift 78
    action 'WKS' (noprec):   shift 111
    action 'LETTERSYM' (noprec):   shift 90
    action 'GROUPEDLETTERSYM' (noprec):   shift 97
    action 'WORDSYM' (noprec):   shift 104
    action 'NULL' (noprec):   shift 64
    action 'TOKEN' (noprec):   error
    action 'INTEGER' (noprec):   shift 84
    action 'DOUBLE' (noprec):   shift 83
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto expr: 1
    goto relnexpr: 2
    goto plusexpr: 3
    goto timesexpr: 16
    goto powerexpr: 25
    goto prefixexpr: 31
    goto postfixexpr: 37
    goto primaryexpr: 42
    goto primaryexprnovb: 47
    goto sym: 51
    goto number: 52
    goto realnumber: 79
    goto doublenumber: 81
    goto integernumber: 82
    goto complexnumber: 80
    goto lettersym: 74
    goto groupedlettersym: 75
    goto wordsym: 76
    goto wellknownsym: 77

state 1:
  items:
    _startexpr -> expr . 

  actions:
    action 'EOF' (noprec):   accept
    action 'LE' (noprec):   accept
    action 'GE' (noprec):   accept
    action 'NE' (noprec):   accept
    action 'PM' (noprec):   accept
    action 'MP' (noprec):   accept
    action 'ERRS' (noprec):   accept
    action 'ERRE' (noprec):   accept
    action 'LSB' (noprec):   accept
    action 'RSB' (noprec):   accept
    action 'US' (noprec):   accept
    action 'LT' (noprec):   accept
    action 'GT' (noprec):   accept
    action 'COMMA' (noprec):   accept
    action 'LP' (noprec):   accept
    action 'RP' (noprec):   accept
    action 'LCB' (noprec):   accept
    action 'RCB' (noprec):   accept
    action 'EQ' (noprec):   accept
    action 'FACT' (noprec):   accept
    action 'PLUS' (noprec):   accept
    action 'MINUS' (noprec):   accept
    action 'TIMES' (noprec):   accept
    action 'DIVIDE' (noprec):   accept
    action 'POW' (noprec):   accept
    action 'VB' (noprec):   accept
    action 'LLT' (noprec):   accept
    action 'GGT' (noprec):   accept
    action 'ID' (noprec):   accept
    action 'WKS' (noprec):   accept
    action 'LETTERSYM' (noprec):   accept
    action 'GROUPEDLETTERSYM' (noprec):   accept
    action 'WORDSYM' (noprec):   accept
    action 'NULL' (noprec):   accept
    action 'TOKEN' (noprec):   accept
    action 'INTEGER' (noprec):   accept
    action 'DOUBLE' (noprec):   accept
    action 'error' (noprec):   accept
    action '#' (noprec):   accept
    action '$$' (noprec):   accept

  immediate action:   accept
 gotos:

state 2:
  items:
    expr -> relnexpr . 
    relnexpr -> relnexpr . 'EQ' relnexpr
    relnexpr -> relnexpr . 'LT' relnexpr
    relnexpr -> relnexpr . 'GT' relnexpr
    relnexpr -> relnexpr . 'LE' relnexpr
    relnexpr -> relnexpr . 'GE' relnexpr
    relnexpr -> relnexpr . 'NE' relnexpr

  actions:
    action 'EOF' (noprec):   reduce expr --> relnexpr
    action 'LE' (noprec):   shift 13
    action 'GE' (noprec):   shift 14
    action 'NE' (noprec):   shift 15
    action 'PM' (noprec):   reduce expr --> relnexpr
    action 'MP' (noprec):   reduce expr --> relnexpr
    action 'ERRS' (noprec):   reduce expr --> relnexpr
    action 'ERRE' (noprec):   reduce expr --> relnexpr
    action 'LSB' (noprec):   reduce expr --> relnexpr
    action 'RSB' (noprec):   reduce expr --> relnexpr
    action 'US' (noprec):   reduce expr --> relnexpr
    action 'LT' (noprec):   shift 11
    action 'GT' (noprec):   shift 12
    action 'COMMA' (noprec):   reduce expr --> relnexpr
    action 'LP' (noprec):   reduce expr --> relnexpr
    action 'RP' (noprec):   reduce expr --> relnexpr
    action 'LCB' (noprec):   reduce expr --> relnexpr
    action 'RCB' (noprec):   reduce expr --> relnexpr
    action 'EQ' (noprec):   shift 10
    action 'FACT' (noprec):   reduce expr --> relnexpr
    action 'PLUS' (noprec):   reduce expr --> relnexpr
    action 'MINUS' (noprec):   reduce expr --> relnexpr
    action 'TIMES' (noprec):   reduce expr --> relnexpr
    action 'DIVIDE' (noprec):   reduce expr --> relnexpr
    action 'POW' (noprec):   reduce expr --> relnexpr
    action 'VB' (noprec):   reduce expr --> relnexpr
    action 'LLT' (noprec):   reduce expr --> relnexpr
    action 'GGT' (noprec):   reduce expr --> relnexpr
    action 'ID' (noprec):   reduce expr --> relnexpr
    action 'WKS' (noprec):   reduce expr --> relnexpr
    action 'LETTERSYM' (noprec):   reduce expr --> relnexpr
    action 'GROUPEDLETTERSYM' (noprec):   reduce expr --> relnexpr
    action 'WORDSYM' (noprec):   reduce expr --> relnexpr
    action 'NULL' (noprec):   reduce expr --> relnexpr
    action 'TOKEN' (noprec):   reduce expr --> relnexpr
    action 'INTEGER' (noprec):   reduce expr --> relnexpr
    action 'DOUBLE' (noprec):   reduce expr --> relnexpr
    action 'error' (noprec):   reduce expr --> relnexpr
    action '#' (noprec):   reduce expr --> relnexpr
    action '$$' (noprec):   reduce expr --> relnexpr

  immediate action: <none>
 gotos:

state 3:
  items:
    relnexpr -> plusexpr . 
    plusexpr -> plusexpr . 'PLUS' timesexpr
    plusexpr -> plusexpr . 'MINUS' timesexpr
    plusexpr -> plusexpr . 'PM' timesexpr
    plusexpr -> plusexpr . 'MP' timesexpr

  actions:
    action 'EOF' (noprec):   reduce relnexpr --> plusexpr
    action 'LE' (noprec):   reduce relnexpr --> plusexpr
    action 'GE' (noprec):   reduce relnexpr --> plusexpr
    action 'NE' (noprec):   reduce relnexpr --> plusexpr
    action 'PM' (noprec):   shift 21
    action 'MP' (noprec):   shift 23
    action 'ERRS' (noprec):   reduce relnexpr --> plusexpr
    action 'ERRE' (noprec):   reduce relnexpr --> plusexpr
    action 'LSB' (noprec):   reduce relnexpr --> plusexpr
    action 'RSB' (noprec):   reduce relnexpr --> plusexpr
    action 'US' (noprec):   reduce relnexpr --> plusexpr
    action 'LT' (noprec):   reduce relnexpr --> plusexpr
    action 'GT' (noprec):   reduce relnexpr --> plusexpr
    action 'COMMA' (noprec):   reduce relnexpr --> plusexpr
    action 'LP' (noprec):   reduce relnexpr --> plusexpr
    action 'RP' (noprec):   reduce relnexpr --> plusexpr
    action 'LCB' (noprec):   reduce relnexpr --> plusexpr
    action 'RCB' (noprec):   reduce relnexpr --> plusexpr
    action 'EQ' (noprec):   reduce relnexpr --> plusexpr
    action 'FACT' (noprec):   reduce relnexpr --> plusexpr
    action 'PLUS' (noprec):   shift 17
    action 'MINUS' (noprec):   shift 19
    action 'TIMES' (noprec):   reduce relnexpr --> plusexpr
    action 'DIVIDE' (noprec):   reduce relnexpr --> plusexpr
    action 'POW' (noprec):   reduce relnexpr --> plusexpr
    action 'VB' (noprec):   reduce relnexpr --> plusexpr
    action 'LLT' (noprec):   reduce relnexpr --> plusexpr
    action 'GGT' (noprec):   reduce relnexpr --> plusexpr
    action 'ID' (noprec):   reduce relnexpr --> plusexpr
    action 'WKS' (noprec):   reduce relnexpr --> plusexpr
    action 'LETTERSYM' (noprec):   reduce relnexpr --> plusexpr
    action 'GROUPEDLETTERSYM' (noprec):   reduce relnexpr --> plusexpr
    action 'WORDSYM' (noprec):   reduce relnexpr --> plusexpr
    action 'NULL' (noprec):   reduce relnexpr --> plusexpr
    action 'TOKEN' (noprec):   reduce relnexpr --> plusexpr
    action 'INTEGER' (noprec):   reduce relnexpr --> plusexpr
    action 'DOUBLE' (noprec):   reduce relnexpr --> plusexpr
    action 'error' (noprec):   reduce relnexpr --> plusexpr
    action '#' (noprec):   reduce relnexpr --> plusexpr
    action '$$' (noprec):   reduce relnexpr --> plusexpr

  immediate action: <none>
 gotos:

state 4:
  items:
    relnexpr -> relnexpr . 'EQ' relnexpr
    relnexpr -> relnexpr 'EQ' relnexpr . 
    relnexpr -> relnexpr . 'LT' relnexpr
    relnexpr -> relnexpr . 'GT' relnexpr
    relnexpr -> relnexpr . 'LE' relnexpr
    relnexpr -> relnexpr . 'GE' relnexpr
    relnexpr -> relnexpr . 'NE' relnexpr

  actions:
    action 'EOF' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'LE' (noprec):   shift 13
    action 'GE' (noprec):   shift 14
    action 'NE' (noprec):   shift 15
    action 'PM' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'MP' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'ERRS' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'ERRE' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'LSB' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'RSB' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'US' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'LT' (noprec):   shift 11
    action 'GT' (noprec):   shift 12
    action 'COMMA' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'LP' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'RP' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'LCB' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'RCB' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'EQ' (noprec):   shift 10
    action 'FACT' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'PLUS' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'MINUS' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'TIMES' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'DIVIDE' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'POW' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'VB' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'LLT' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'GGT' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'ID' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'WKS' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'LETTERSYM' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'GROUPEDLETTERSYM' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'WORDSYM' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'NULL' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'TOKEN' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'INTEGER' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'DOUBLE' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action 'error' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action '#' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr
    action '$$' (noprec):   reduce relnexpr --> relnexpr 'EQ' relnexpr

  immediate action: <none>
 gotos:

state 5:
  items:
    relnexpr -> relnexpr . 'EQ' relnexpr
    relnexpr -> relnexpr . 'LT' relnexpr
    relnexpr -> relnexpr 'LT' relnexpr . 
    relnexpr -> relnexpr . 'GT' relnexpr
    relnexpr -> relnexpr . 'LE' relnexpr
    relnexpr -> relnexpr . 'GE' relnexpr
    relnexpr -> relnexpr . 'NE' relnexpr

  actions:
    action 'EOF' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'LE' (noprec):   shift 13
    action 'GE' (noprec):   shift 14
    action 'NE' (noprec):   shift 15
    action 'PM' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'MP' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'ERRS' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'ERRE' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'LSB' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'RSB' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'US' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'LT' (noprec):   shift 11
    action 'GT' (noprec):   shift 12
    action 'COMMA' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'LP' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'RP' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'LCB' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'RCB' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'EQ' (noprec):   shift 10
    action 'FACT' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'PLUS' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'MINUS' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'TIMES' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'DIVIDE' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'POW' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'VB' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'LLT' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'GGT' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'ID' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'WKS' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'LETTERSYM' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'GROUPEDLETTERSYM' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'WORDSYM' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'NULL' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'TOKEN' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'INTEGER' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'DOUBLE' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action 'error' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action '#' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr
    action '$$' (noprec):   reduce relnexpr --> relnexpr 'LT' relnexpr

  immediate action: <none>
 gotos:

state 6:
  items:
    relnexpr -> relnexpr . 'EQ' relnexpr
    relnexpr -> relnexpr . 'LT' relnexpr
    relnexpr -> relnexpr . 'GT' relnexpr
    relnexpr -> relnexpr 'GT' relnexpr . 
    relnexpr -> relnexpr . 'LE' relnexpr
    relnexpr -> relnexpr . 'GE' relnexpr
    relnexpr -> relnexpr . 'NE' relnexpr

  actions:
    action 'EOF' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'LE' (noprec):   shift 13
    action 'GE' (noprec):   shift 14
    action 'NE' (noprec):   shift 15
    action 'PM' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'MP' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'ERRS' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'ERRE' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'LSB' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'RSB' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'US' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'LT' (noprec):   shift 11
    action 'GT' (noprec):   shift 12
    action 'COMMA' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'LP' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'RP' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'LCB' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'RCB' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'EQ' (noprec):   shift 10
    action 'FACT' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'PLUS' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'MINUS' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'TIMES' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'DIVIDE' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'POW' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'VB' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'LLT' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'GGT' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'ID' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'WKS' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'LETTERSYM' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'GROUPEDLETTERSYM' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'WORDSYM' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'NULL' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'TOKEN' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'INTEGER' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'DOUBLE' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action 'error' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action '#' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr
    action '$$' (noprec):   reduce relnexpr --> relnexpr 'GT' relnexpr

  immediate action: <none>
 gotos:

state 7:
  items:
    relnexpr -> relnexpr . 'EQ' relnexpr
    relnexpr -> relnexpr . 'LT' relnexpr
    relnexpr -> relnexpr . 'GT' relnexpr
    relnexpr -> relnexpr . 'LE' relnexpr
    relnexpr -> relnexpr 'LE' relnexpr . 
    relnexpr -> relnexpr . 'GE' relnexpr
    relnexpr -> relnexpr . 'NE' relnexpr

  actions:
    action 'EOF' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'LE' (noprec):   shift 13
    action 'GE' (noprec):   shift 14
    action 'NE' (noprec):   shift 15
    action 'PM' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'MP' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'ERRS' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'ERRE' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'LSB' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'RSB' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'US' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'LT' (noprec):   shift 11
    action 'GT' (noprec):   shift 12
    action 'COMMA' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'LP' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'RP' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'LCB' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'RCB' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'EQ' (noprec):   shift 10
    action 'FACT' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'PLUS' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'MINUS' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'TIMES' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'DIVIDE' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'POW' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'VB' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'LLT' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'GGT' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'ID' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'WKS' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'LETTERSYM' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'GROUPEDLETTERSYM' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'WORDSYM' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'NULL' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'TOKEN' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'INTEGER' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'DOUBLE' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action 'error' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action '#' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr
    action '$$' (noprec):   reduce relnexpr --> relnexpr 'LE' relnexpr

  immediate action: <none>
 gotos:

state 8:
  items:
    relnexpr -> relnexpr . 'EQ' relnexpr
    relnexpr -> relnexpr . 'LT' relnexpr
    relnexpr -> relnexpr . 'GT' relnexpr
    relnexpr -> relnexpr . 'LE' relnexpr
    relnexpr -> relnexpr . 'GE' relnexpr
    relnexpr -> relnexpr 'GE' relnexpr . 
    relnexpr -> relnexpr . 'NE' relnexpr

  actions:
    action 'EOF' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'LE' (noprec):   shift 13
    action 'GE' (noprec):   shift 14
    action 'NE' (noprec):   shift 15
    action 'PM' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'MP' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'ERRS' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'ERRE' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'LSB' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'RSB' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'US' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'LT' (noprec):   shift 11
    action 'GT' (noprec):   shift 12
    action 'COMMA' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'LP' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'RP' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'LCB' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'RCB' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'EQ' (noprec):   shift 10
    action 'FACT' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'PLUS' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'MINUS' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'TIMES' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'DIVIDE' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'POW' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'VB' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'LLT' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'GGT' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'ID' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'WKS' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'LETTERSYM' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'GROUPEDLETTERSYM' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'WORDSYM' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'NULL' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'TOKEN' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'INTEGER' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'DOUBLE' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action 'error' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action '#' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr
    action '$$' (noprec):   reduce relnexpr --> relnexpr 'GE' relnexpr

  immediate action: <none>
 gotos:

state 9:
  items:
    relnexpr -> relnexpr . 'EQ' relnexpr
    relnexpr -> relnexpr . 'LT' relnexpr
    relnexpr -> relnexpr . 'GT' relnexpr
    relnexpr -> relnexpr . 'LE' relnexpr
    relnexpr -> relnexpr . 'GE' relnexpr
    relnexpr -> relnexpr . 'NE' relnexpr
    relnexpr -> relnexpr 'NE' relnexpr . 

  actions:
    action 'EOF' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'LE' (noprec):   shift 13
    action 'GE' (noprec):   shift 14
    action 'NE' (noprec):   shift 15
    action 'PM' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'MP' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'ERRS' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'ERRE' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'LSB' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'RSB' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'US' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'LT' (noprec):   shift 11
    action 'GT' (noprec):   shift 12
    action 'COMMA' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'LP' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'RP' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'LCB' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'RCB' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'EQ' (noprec):   shift 10
    action 'FACT' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'PLUS' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'MINUS' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'TIMES' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'DIVIDE' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'POW' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'VB' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'LLT' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'GGT' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'ID' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'WKS' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'LETTERSYM' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'GROUPEDLETTERSYM' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'WORDSYM' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'NULL' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'TOKEN' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'INTEGER' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'DOUBLE' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action 'error' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action '#' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr
    action '$$' (noprec):   reduce relnexpr --> relnexpr 'NE' relnexpr

  immediate action: <none>
 gotos:

state 10:
  items:
    relnexpr -> relnexpr 'EQ' . relnexpr
